# ima-parser

./: Cargo.toml  README.md
.github/workflows/: build.yml  docs.yml  lint.yml  spdx.yml  test.yml
examples/: parse_ascii_log.rs  parse_binary_log.rs  parse_policy.rs
src/: error.rs  hash.rs  lib.rs  log.rs  policy.rs
src/log/: ascii.rs  event.rs  parser.rs  template.rs  template_hash.rs
src/policy/: parser.rs  rule.rs
testdata/logs/: ascii_runtime_measurements_sha1  ascii_runtime_measurements_sha256  ascii_runtime_measurements_sha384  binary_runtime_measurements_sha1  binary_runtime_measurements_sha256  binary_runtime_measurements_sha384
testdata/policies/: builtin-tcb-policy  custom-ima-policy
tests/: integration.rs  testdata.rs
