[package]
name = "ima-parser"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"
description = "Rust library for parsing Linux Integrity Measurement Architecture (IMA) policies and eventlogs"
# documentation = ""
readme = "README.md"
# homepage = ""
repository = "https://github.com/hyperfinitism/ima-parser"
license = "Apache-2.0"
# keywords = []
# categories = []
include = ["src/**/*", "examples/**/*", "LICENSE"]

[[example]]
name = "parse_binary_log"
path = "examples/parse_binary_log.rs"

[[example]]
name = "parse_ascii_log"
path = "examples/parse_ascii_log.rs"

[[example]]
name = "parse_policy"
path = "examples/parse_policy.rs"

[dependencies]
thiserror = "2.0.18"
sha1 = { version = "0.11.0", optional = true }
sha2 = { version = "0.11.0", optional = true }

[dev-dependencies]
sha1 = "0.11.0"
sha2 = "0.11.0"
clap = { version = "4.6.1", features = ["derive"] }

[features]
default = ["hash"]
hash = ["dep:sha1", "dep:sha2"]
